# littypicky

./: FEED_FEATURE_COMPLETE.md  README.md  package-lock.json
back-end/: .env.example  .env.test  .envrc  .gitignore  Cargo.toml  FEED_SETUP_GUIDE.md  README.md  docker-compose-ci.override.yml  docker-compose.override.yml  docker-compose.yml  flake.nix  pg_hba.conf
back-end/.sqlx/: query-0251b7f0d80646a85f1016b8a4ff7875b25a45104261de29eb82e0d1eb18c97c.json  query-0482caaf5aab1c8a80e05c4705a5775de977122bc9af72c30fd5932c4950e7c5.json  query-04a0057a19c5a05850259b92e3f03176bd6921df5a20ec904327a584cbe01fb1.json  query-0b29072ba5da0638956257521527edb78b3076f214a1a6bc23c1e867d6ebae86.json  query-11040e8e453ad3ac4abc475c71a6dcd718d6c7c9aa3f55d9f1e9319d3f2c2952.json  query-11bc90b5920c22d74066a32d2e7cc7899e06770a35e90c4973025f56c4a03f15.json  query-1894aecabd2ee3efbc32470a3633819f04a5e0b4384cccb3ead798f70886be5c.json  query-19f63a010d4d02344abce143643a6a22911df3251920d08e9ed0c0c03655e02e.json  query-1da777cdd24c3b72004e07f176ec7d9a61cc71695d14b136079b36c571a5167c.json  query-20c00c0298436e9709c62ae86be7d06f7e79c41000544d923c241052a7ea2c55.json  query-2438c79083472709cd2d0ee21e69792a18aea49413bdf88e50dda4b7e2018520.json  query-2586e9502c733ea1fbc947e7dac82a8084a567bbaf17b4e9deab499deeb3de46.json  query-2c3659fec7cca04f7dd8df5b6598fed9a7ab697b4fba0395cc6ad374fc9dc3bc.json  query-320a13cd8c6ab0d31e8d6ef4be6d09d02d82d559b6c5217bebdaf9e9b004b23c.json  query-339ed6c7b6fbe827fc74f77bae3a9fd1e1a5e9d05cf07d7bdd6bce47787f2480.json  query-345335c89bdfcd023d826787450eaf0e41221330e640644094e6f25e13ef356c.json  (+61 more)
back-end/migrations/: 001_create_extensions.sql  (+18 more)
(+119 files in other folders)
